@@ -1,5 +1,15 @@
-AUX mcollectived.initd 587 RMD160 f3cd98198d2837c7b21c499cd7b42b3488070bb6 SHA1 030453840370a7a1643eb3f4c2b13d69b8f52904 SHA256 503678223d8832f4a9e17016cf764a68c47000e892f9e71da3ca073e2c5b75d2
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+AUX mcollectived.initd 597 RMD160 ad252d866ea4f9f5dac7cb8c851d7ef561eae84c SHA1 4fc766e41db8f50dcde5e8f2c5495f4ad13dd9ec SHA256 3a187881d05152762116a80bb325c1f80ed2096802c19aa37ba77287784979fb
 DIST mcollective-0.4.2.tgz 97887 RMD160 fe35f6297ec541948323ebbc6b02406bfd0a6478 SHA1 04d80b4b74abf5f44cd1e6df2f36a4cc6ff00591 SHA256 966ecb84c131750d5573cc5707d7e2919ea1aacebd3ee35a99d07730a0d350e9
-EBUILD mcollective-0.4.2.ebuild 880 RMD160 a2a82af670dcf3777fdb46745ec5330c8cd0936e SHA1 79ec8a2731ea5c9a3b0241a0aaa787e0d5919ea4 SHA256 328c76c8639493b8e54efe6d7df8c356953f0f0ad7698c9f9282e3c95b639dc2
-MISC ChangeLog 297 RMD160 f3c7169f920e0a13deaa719b03a907aff9fdb63c SHA1 d475b27e065611629de45d10a3eb4b04fc6e04b3 SHA256 ed7bc20bb4b29887b82124f15c1440f38f4bf03a08e8aec6d3e7d407433316a9
+EBUILD mcollective-0.4.2.ebuild 1343 RMD160 8ada4cb521181dad0bf3c46f7866b2ef1fecded7 SHA1 55f28397841b34f685e086e37fe06dc3eca27971 SHA256 6abbee4e1e854f8c6f72e49a442af311a53c27d7aaa3ca0233e8ad72f84aaf77
+MISC ChangeLog 491 RMD160 f57198a4a2bf54206a1025e699a70bed661215df SHA1 57e604a6355531dd219fb6c9e1729e6de9375d13 SHA256 879006e6dede2141412e813fc2bf862ec908a74f0a1b20be1685f9e5546a5d99
 MISC metadata.xml 428 RMD160 feee94472e92ab507bdbdd678fa2ea8b02b65ac6 SHA1 c2b0057b0d86fe3e5cc93cbb3ed551410ca05d05 SHA256 16f1e90b1d2d4b13cd323983cde873dcc56bb25eade80030d21bc1815a158338
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iD8DBQFLVSLHQW+hXSf0t0IRAtpuAKCah7Mo48jTjmhMOtElt89Pw8vbaQCgiAYM
+t0XsvPTEVI5bf6oIC2j8IMc=
+=yRXH
+-----END PGP SIGNATURE-----
