@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Jan 2010; Lance Albertson <ramereth@gentoo.org>
+  mcollective-0.4.2.ebuild, files/mcollectived.initd:
+  Fix restart in the init script. Add informative bits after the package is
+  merged.
+
 *mcollective-0.4.2 (18 Jan 2010)
 
   18 Jan 2010; Lance Albertson <ramereth@gentoo.org>
